@startuml domain_events
!theme blueprint

title Bookshelf — Domain Events

abstract class DomainEvent <<Domain Event>> {
    +event_name(): str
}

package "Book Events" {
    class BookCreated <<Domain Event>> {
        book_id : BookId
        author_id : AuthorId
        title : BookTitle
        isbn : ISBN
        +BookCreated(book_id: BookId, author_id: AuthorId, title: BookTitle, isbn: ISBN)
    }

    class BookTitleChanged <<Domain Event>> {
        book_id : BookId
        new_title : BookTitle
        +BookTitleChanged(book_id: BookId, new_title: BookTitle)
    }

    class BookIsbnChanged <<Domain Event>> {
        book_id : BookId
        new_isbn : ISBN
        +BookIsbnChanged(book_id: BookId, new_isbn: ISBN)
    }

    class BookSummaryChanged <<Domain Event>> {
        book_id : BookId
        new_summary : Summary
        +BookSummaryChanged(book_id: BookId, new_summary: Summary)
    }

    class GenreAdded <<Domain Event>> {
        book_id : BookId
        genre : Genre
        +GenreAdded(book_id: BookId, genre: Genre)
    }

    class GenreRemoved <<Domain Event>> {
        book_id : BookId
        genre : Genre
        +GenreRemoved(book_id: BookId, genre: Genre)
    }

    class ReviewAdded <<Domain Event>> {
        book_id : BookId
        review_id : ReviewId
        +ReviewAdded(book_id: BookId, review_id: ReviewId)
    }

    class ReviewRemoved <<Domain Event>> {
        book_id : BookId
        review_id : ReviewId
        +ReviewRemoved(book_id: BookId, review_id: ReviewId)
    }
}

package "Author Events" {
    class AuthorCreated <<Domain Event>> {
        author_id : AuthorId
        name : AuthorName
        +AuthorCreated(author_id: AuthorId, name: AuthorName)
    }

    class AuthorNameChanged <<Domain Event>> {
        author_id : AuthorId
        new_name : AuthorName
        +AuthorNameChanged(author_id: AuthorId, new_name: AuthorName)
    }

    class AuthorBiographyChanged <<Domain Event>> {
        author_id : AuthorId
        new_biography : AuthorBiography
        +AuthorBiographyChanged(author_id: AuthorId, new_biography: AuthorBiography)
    }
}

DomainEvent <|-- BookCreated
DomainEvent <|-- BookTitleChanged
DomainEvent <|-- BookIsbnChanged
DomainEvent <|-- BookSummaryChanged
DomainEvent <|-- GenreAdded
DomainEvent <|-- GenreRemoved
DomainEvent <|-- ReviewAdded
DomainEvent <|-- ReviewRemoved
DomainEvent <|-- AuthorCreated
DomainEvent <|-- AuthorNameChanged
DomainEvent <|-- AuthorBiographyChanged

@enduml
